--- a/index.html
+++ b/index.html
@@ -3,13 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <title>Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li> <a href="./recipes/ribs.html">Baby Back Ribs</a></li>
-        <li><a href="./recipes/lasagna.html">Lasagna Flatbread</a></li>
-    </ul>
-   
+    <div class="header">
+        <h1>Favorite Food Recipes</h1>
+        <div class="by">by KyleFon</div>
+    </div>
+    <div class="list">
+        <div class="box">
+            <div class="upper">
+                <img src="recipes/ribs.jpeg">
+                <a href="./recipes/ribs.html">Baby Back Ribs</a>
+            </div>
+            <div class="info">
+                <div class="info1">Time</div>
+                <div class="info1">Portion</div>
+            </div>
+            <div class="info">
+                <div class="info2">1 hour</div>
+                <div class="info2">8 People</div>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="upper">
+                <img src="recipes/lasagna.jpg"> 
+                <a href="./recipes/lasagna.html">Lasagna Flatbread</a>
+            </div>
+            <div class="info">
+                <div class="info1">Time</div>
+                <div class="info1">Portion</div>
+            </div>
+            <div class="info">
+                <div class="info2">30 mins</div>
+                <div class="info2">3 People</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
