--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -2,35 +2,49 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
+    <link rel="stylesheet" href="./recipe.css">
     <title>Recipes</title>
 </head>
 <body>
     <h1>Lasagna Flatbread</h1>
-    <img src="lasagna.jpg">
-    <!--Description of Recipe-->
-    <h2>Description</h2>
-    <p>
-        A simple lasagna pizza that takes 40 minutes to prepare and cook. It serves up to 6 people.
-    </p>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>1 (15 ounce) container ricotta cheese</li>
-        <li>1 (8 ounce) package shredded mozzarella cheese, divided</li>
-        <li>1 (3 ounce) package Parmesan cheese</li>
-        <li>1 egg</li>
-        <li>1 pound sausage</li>
-        <li>½ (26 ounce) jar marinara sauce</li>
-        <li>6 flatbreads</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-        <li>Preheat oven to 375 degrees F (190 degrees C).</li>
-        <li>Combine ricotta cheese, 1/2 of the mozzarella cheese, Parmesan cheese, egg, and Italian seasoning in a bowl.</li>
-        <li>Cook sausage in a skillet over medium heat until no longer pink, 5 to 10 minutes; drain. Stir in marinara sauce.</li>
-        <li>Spread 1/6 of the cheese mixture evenly on each flatbread; cover with sausage mixture. Top with remaining mozzarella cheese.</li>
-        <li>Bake in the preheated oven until cheese is melted and bubbly, 10 to 15 minutes.</li>
-    </ol>
-    
+    <div class="container">
+        <div class="left">
+            <img src="lasagna.jpg">
+            <!--Description of Recipe-->
+            <div class="br"></div>
+            <h2>Description</h2>
+            <p>
+                A simple lasagna pizza that takes 40 minutes to prepare and cook. It serves up to 6 people.
+            </p>
+        </div>
+        <div class="vl"></div>
+        <div class="right">
+            <div class="ing">
+                <h2>Ingredients</h2>
+                <div class="ingre">
+                    <ul>
+                        <li>1 (15 ounce) container ricotta cheese</li>
+                        <li>1 (8 ounce) package shredded mozzarella cheese, divided</li>
+                        <li>1 (3 ounce) package Parmesan cheese</li>
+                        <li>1 egg</li>
+                        <li>1 pound sausage</li>
+                        <li>½ (26 ounce) jar marinara sauce</li>
+                        <li>6 flatbreads</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="br"></div>
+            <div class="steps">
+                <h2>Steps</h2>
+                <ol>
+                    <li>Preheat oven to 375 degrees F (190 degrees C).</li>
+                    <li>Combine ricotta cheese, 1/2 of the mozzarella cheese, Parmesan cheese, egg, and Italian seasoning in a bowl.</li>
+                    <li>Cook sausage in a skillet over medium heat until no longer pink, 5 to 10 minutes; drain. Stir in marinara sauce.</li>
+                    <li>Spread 1/6 of the cheese mixture evenly on each flatbread; cover with sausage mixture. Top with remaining mozzarella cheese.</li>
+                    <li>Bake in the preheated oven until cheese is melted and bubbly, 10 to 15 minutes.</li>
+                </ol>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
