--- a/recipes/ribs.html
+++ b/recipes/ribs.html
@@ -2,40 +2,58 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
+    <link rel="stylesheet" href="./recipe.css">
     <title>Recipes</title>
 </head>
 <body>
     <h1>Baby Back Ribs</h1>
-    <img src="ribs.jpeg">
-    <!--Description of Recipe-->
-    <h2>Description</h2>
-    <p>Tender, sweet, and sticky baby back ribs that only 
-        take 1 hour from prep to plate. If you like them 
-        with a little spice, add a teaspoon of cayenne 
-        pepper to the dry rub. I make this in my 8-quart 
-        Instant Pot® Duo; a 6-quart pot may require less 
-        liquid.
-    </p>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>2 racks baby back pork ribs</li>
-        <li>1/4 cup dark brown sugar</li>
-        <li>2 tablespoons garlic salt</li>
-        <li>2 tablespoons chili powder</li>
-        <li>1 tablespoon ground black pepper</li>
-        <li>1 teaspoon cayenne pepper</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-        <li>Use a butter knife to cut into an edge of the rib racks. Use a paper towel to grab and lift off the silvery membranes.</li>
-        <li>Combine brown sugar, garlic salt, chili powder, black pepper, and cayenne pepper in bowl. Coat the ribs generously with the dry rub.</li>
-        <li>Place the trivet inside the Instant Pot®. Pour in broth, root beer, vinegar, and liquid smoke. Place ribs on the trivet on their sides, with one inside the other. Close and lock the lid and make sure the vent is sealed. Select manual high pressure and set the timer for 30 minutes. Allow 10 to 15 minutes for pressure to build.</li>
-        <li>Release pressure using the natural-release method according to manufacturer's instructions for 15 minutes. Release remaining pressure carefully using the quick-release method according to manufacturer's instructions, about 5 minutes. Unlock and remove the lid.</li>
-        <li>Set an oven rack about 6 inches from the heat source and preheat the oven's broiler on the highest heat setting. Place a rack 6 inches from the heat source.</li>
-        <li>Transfer ribs to a broiling pan and generously coat with barbecue sauce.</li>
-        <li>Cook in the broiler until barbeque sauce is bubbly and caramelized, 5 to 7 minutes.</li>
-    </ol>
-    
+    <div class="container">
+        <div class="left">
+            <div class="pic">
+                <img src="ribs.jpeg">
+            </div>
+            <!--Description of Recipe-->
+            <div class="br"></div>
+            <div class="desc">
+                <h2>Description</h2>
+                <p>Tender, sweet, and sticky baby back ribs that only 
+                    take 1 hour from prep to plate. If you like them 
+                    with a little spice, add a teaspoon of cayenne 
+                    pepper to the dry rub. I make this in my 8-quart 
+                    Instant Pot® Duo; a 6-quart pot may require less 
+                    liquid.
+                </p>
+            </div>
+        </div>
+        <div class="vl"></div>
+        <div class="right">
+            <div class="ing">
+                <h2>Ingredients</h2>
+                <div class="ingre">
+                    <ul>
+                        <li>2 racks baby back pork ribs</li>
+                        <li>1/4 cup dark brown sugar</li>
+                        <li>2 tablespoons garlic salt</li>
+                        <li>2 tablespoons chili powder</li>
+                        <li>1 tablespoon ground black pepper</li>
+                        <li>1 teaspoon cayenne pepper</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="br"></div>
+            <div class="steps">
+                <h2>Steps</h2>
+                <ol>
+                    <li>Use a butter knife to cut into an edge of the rib racks. Use a paper towel to grab and lift off the silvery membranes.</li>
+                    <li>Combine brown sugar, garlic salt, chili powder, black pepper, and cayenne pepper in bowl. Coat the ribs generously with the dry rub.</li>
+                    <li>Place the trivet inside the Instant Pot®. Pour in broth, root beer, vinegar, and liquid smoke. Place ribs on the trivet on their sides, with one inside the other. Close and lock the lid and make sure the vent is sealed. Select manual high pressure and set the timer for 30 minutes. Allow 10 to 15 minutes for pressure to build.</li>
+                    <li>Release pressure using the natural-release method according to manufacturer's instructions for 15 minutes. Release remaining pressure carefully using the quick-release method according to manufacturer's instructions, about 5 minutes. Unlock and remove the lid.</li>
+                    <li>Set an oven rack about 6 inches from the heat source and preheat the oven's broiler on the highest heat setting. Place a rack 6 inches from the heat source.</li>
+                    <li>Transfer ribs to a broiling pan and generously coat with barbecue sauce.</li>
+                    <li>Cook in the broiler until barbeque sauce is bubbly and caramelized, 5 to 7 minutes.</li>
+                </ol>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
